crates/forge_provider/src/antinomy/snapshots/forge_provider__antinomy__request__tests__tool_message_with_special_chars.snap
---
source: crates/forge_provider/src/antinomy/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "<forge_tool_result><forge_tool_name>html_tool</forge_tool_name><success><![CDATA[{\n                \"html\": \"<div class=\\\"container\\\"><p>Hello <World></p></div>\",\n                \"elements\": [\"<span>\", \"<br/>\", \"<hr>\"],\n                \"attributes\": {\n                    \"style\": \"color: blue; font-size: 12px;\",\n                    \"data-test\": \"<test>&value</test>\"\n                }\n            }]]></success></forge_tool_result>",
  "name": "html_tool",
  "tool_call_id": "456"
}
